prevent comment overflow in mobile version
git-svn-id: svn+ssh://svn.lablz.com/hosts/trunk/hosts@14699 483a4429-297d-4d5f-a489-5c5d2c303994

--- a/styles/common-template.css
+++ b/styles/common-template.css
@@ -1804,7 +1804,7 @@ div .panel_block .dlg_cross, td .panel_block .dlg_cross { display: none; }
 .rounded_rect_tbl .field_comment, #mkresource .field_comment { height: 52px !important; }
 .rounded_rect_tbl .label { -moz-user-select: none; white-space: nowrap; font-size: 16px; font-weight: bold; overflow: visible; color: &[PrimaryColor_4_text];;}
 .rounded_rect_tbl .label img { margin-right: 3px; }
-.rounded_rect_tbl .comment { position: absolute; margin-top: -2px; color: &[Alternative_A];; font-size: 11px; }
+.rounded_rect_tbl .comment { max-width: 17%; overflow: hidden; position: absolute; margin-top: -2px; color: &[Alternative_A];; font-size: 11px; }
 .rounded_rect_tbl .comment a { font-size: 11px; }
 * html .rounded_rect_tbl .comment { left: 0; }
 .field_comment .comment { margin-top: 2px; }
